Make hub use SSR and proxy through go server
